refactor: use both assets and routes
